kube-manifest/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
  - name: pgql
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres
  type: NodePort

---
apiVersion: apps/v1  
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:9.5
        volumeMounts:
        - name: pg-volume
          mountPath: /var/lib/postgresql/data
          subPath: pgdata
        ports:
        - containerPort: 5432
      terminationGracePeriodSeconds: 60
      volumes:
      - name: pg-volume
        persistentVolumeClaim:
          claimName: pvc-postgres
