kube-manifest/uploader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader-app
  labels:
    app: uploader
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader-app
  strategy: {}
  template:
    metadata:
      labels:
        app: uploader-app
    spec:
      containers:
      - image: quay.io/paulbarrie7/uploader-app
        imagePullPolicy: Always
        name: uploader-app
        command: ["yarn"]
        args: ["start-prod"]
        ports:
        - containerPort: 3000
        # resources:
        #   limits:
        #     memory: "50Mi"
        #     cpu: "100m"
        #   requests:
        #     memory: "50Mi"
        #     cpu: "100m"
        volumeMounts:
          - name: uploaded
            mountPath: /usr/app/src/uploaded
      volumes:
      - name: uploaded
        persistentVolumeClaim:
          claimName: pvc-uploader

---
apiVersion: v1
kind: Service
metadata:
  name: uploader-app
spec:
  selector:
    app: uploader-app
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
